--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,34 @@
-<h2>所有資料</h2>
-
-<ul>
-    <% tasks.forEach(function(task) { %>
-        <li><a href='/task/<%= task.id %>'><%= task.id %>: <%= task.title %></a></li>
-    <% }); %>
-</ul>
+<link rel="stylesheet" href="/public/stylesheets/main.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css'/>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
+<script src="/public/javascript/main.js"></script>
+<div id="main-page">
+    <div class="page-header">
+        <form action="/create" method="post">
+            <input class="new-note-input" name="title" type="text" placeholder="new note">
+            <input type="submit" value="submit">
+        </form>
+    </div>
+    <div class="note-container">
+        <% tasks.forEach(function(task) { %>
+        <div class="note-row" data-id="<%= task.id %>">
+            <div class="text-container">
+                <span class="note-text">
+                    <%= task.title %>
+                </span>
+                <input class="text-input" type="text" autofocus>
+            </div>
+            <div class="btn-container">
+                <button class="delete-btn">Delete</button>
+                <button class="edit-btn">Edit</button>
+                <button class="done-btn">Done</button>
+            </div>
+        </div>
+        <% }); %>
+    </div>
+    <div class="page-footer">
+        <button class="show-all">all</button>
+        <button class="show-active">active</button>
+        <button class="show-done">done</button>
+    </div>
+</div>
